# Claude-To-IM

./: .env.example  .gitignore  README.md  pyproject.toml
config/: __init__.py  settings.py
docs/: claude_config_loading.md  claude_config_loading_fix.md  claude_help_response.md  feishu_message_handling.md  help_command_summary.md  help_commands_guide.md  initialization_check.md  manual-testing-checklist.md  new_commands_guide.md  session-exec-behavior.md  session-management-final.md
docs/features/: bot-info-api.md
docs/plans/: 2026-03-11-architecture-design.md  2026-03-11-implementation-plan.md  2026-03-11-session-id-as-workdir.md  2026-03-12-feishu-message-reaction-enhancement-design.md  2026-03-12-feishu-message-reaction-enhancement.md
docs/troubleshooting/: asyncio-cancellation-handling.md  feishu-reaction-errors.md  session-creation-improvements.md  session-exec-auto-resume.md  session-exec-is-active-fix.md  session-exec-temporary-sessions.md  session-id-and-directory-fix.md  session-id-consistency-fix.md  session-resume-fix-2026-03-12.md
examples/: claude_code_sdk.py  feishu_callback.py  feishu_copy_and_paste_by_range.py  feishu_create_app_and_tables.py  feishu_downlaod_media_by_range.py  feishu_event.py  feishu_upload_file.py  feishu_upload_image.py  help_response_example.py
src/claude/: sdk_adapter.py  stream_processor.py
src/cli/: __main__.py  main.py
src/core/: claude_adapter.py  exceptions.py  (+2 more)
tests/: test_help_commands.py  test_help_response.py  test_message_types.py  test_new_commands.py  test_session_exec_temporary.py  test_settings.py
(+31 files in other folders)
